Add support for emitting JSON-Schemas (#2)
* Add support for emitting JSON-Schemas

Signed-off-by: Bernhard Strähle <bernhard.straehle@gmail.com>

* Fix test and run build workflow on PRs

Signed-off-by: Bernhard Strähle <bernhard.straehle@gmail.com>

* Update README

Signed-off-by: Bernhard Strähle <bernhard.straehle@gmail.com>

* Add approval tests for JSON-Schemas

Signed-off-by: Bernhard Strähle <bernhard.straehle@gmail.com>

* Add new options to CLI, fix filename interpolation

Signed-off-by: Bernhard Strähle <bernhard.straehle@gmail.com>

* Add new options to maven-plugin

Signed-off-by: Bernhard Strähle <bernhard.straehle@gmail.com>

---------

Signed-off-by: Bernhard Strähle <bernhard.straehle@gmail.com>